@@ -2,7 +2,7 @@
 
 EXTRA_DIST = README singlenet_1.PCB singlenet_1.geda \
 	     stack_1.geda darlington_1.spice \
-	     amp_1.spice 7447.vhdl
+	     amp_1.spice 7447.vhdl singlenet_1.pads singlenet_1.protel
           
 tests:
 	rm -f new_*
@@ -20,6 +20,12 @@ tests:
 	gnetlist -o new_7447.vhdl -g vhdl \
 		../examples/7447.sch
 	diff 7447.vhdl new_7447.vhdl
+# PADS
+	gnetlist -o new_singlenet_1.pads -g pads ../examples/singlenet_1.sch
+	diff singlenet_1.pads new_singlenet_1.pads
+# protelII
+	gnetlist -o new_singlenet_1.protel -g protelII ../examples/singlenet_1.sch
+	diff singlenet_1.protel new_singlenet_1.protel
 
 # These tests are internal to Ales and will not work without the schematics
 # which I am unable to distribute (due to copyright laws).
