@@ -1,0 +1,12 @@
+!PADS-POWERPCB-V3.0-MILS!
+
+*PART*
+U100	unknown
+
+*NET*
+*SIGNAL* SINGLE_NET2
+ U100.1 U100.3
+*SIGNAL* SINGLE_NET
+ U100.5 U100.4 U100.10 U100.8 U100.9 U100.6
+
+*END*
