@@ -1,0 +1,73 @@
+PROTEL NETLIST 2.0
+[
+DESIGNATOR
+U100
+FOOTPRINT
+unknown
+PARTTYPE
+unknown
+DESCRIPTION
+7400
+Part Field 1
+*
+Part Field 2
+*
+Part Field 3
+*
+Part Field 4
+*
+Part Field 5
+*
+Part Field 6
+*
+Part Field 7
+*
+Part Field 8
+*
+Part Field 9
+*
+Part Field 10
+*
+Part Field 11
+*
+Part Field 12
+*
+Part Field 13
+*
+Part Field 14
+*
+Part Field 15
+*
+Part Field 16
+*
+LIBRARYFIELD1
+
+LIBRARYFIELD2
+
+LIBRARYFIELD3
+
+LIBRARYFIELD4
+
+LIBRARYFIELD5
+
+LIBRARYFIELD6
+
+LIBRARYFIELD7
+
+LIBRARYFIELD8
+
+]
+(
+SINGLE_NET2
+U100-1 7400-1 PASSIVE
+U100-3 7400-3 PASSIVE 
+)
+(
+SINGLE_NET
+U100-5 7400-5 PASSIVE
+U100-4 7400-4 PASSIVE
+U100-10 7400-10 PASSIVE
+U100-8 7400-8 PASSIVE
+U100-9 7400-9 PASSIVE
+U100-6 7400-6 PASSIVE 
+)
